20465 - Programing in C Lab/Project/Maman14-mac/.metadata/.plugins/org.eclipse.cdt.ui/Maman14.build.log
08:06:07 **** Incremental Build of configuration Debug for project Maman14 ****
make all 
Building file: ../src/second_scan.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/second_scan.d" -MT"src/second_scan.d" -o "src/second_scan.o" "../src/second_scan.c"
In file included from ../src/second_scan.h:11:0,
                 from ../src/second_scan.c:8:
../src/utils.h:144:1: warning: parameter names (without types) in function declaration
 void print_symbol_list(symbol_ptr);
 ^~~~
../src/second_scan.c:19:6: error: conflicting types for ‘second_scan’
 Bool second_scan (bodyArray parsed, int parsed_size, symbol_ptr * symbols, int ic,int** result_array,int* result_size){
      ^~~~~~~~~~~
In file included from ../src/second_scan.c:8:0:
../src/second_scan.h:26:6: note: previous declaration of ‘second_scan’ was here
 Bool second_scan (bodyArray,int,symbol_ptr*,int, encoded_ptr *, int *);
      ^~~~~~~~~~~
../src/second_scan.c: In function ‘second_scan’:
../src/second_scan.c:23:18: warning: unused variable ‘src’ [-Wunused-variable]
  int opcode,dest,src;
                  ^~~
../src/second_scan.c:23:13: warning: unused variable ‘dest’ [-Wunused-variable]
  int opcode,dest,src;
             ^~~~
../src/second_scan.c:20:6: warning: variable ‘DC’ set but not used [-Wunused-but-set-variable]
  int DC,i,j, length,general_counter,c;
      ^~
make: *** [src/second_scan.o] Error 1
src/subdir.mk:42: recipe for target 'src/second_scan.o' failed

08:06:08 Build Finished (took 140ms)

